Bug 77723 - FILEOPEN: table is imported incorrectly as white table
Summary: FILEOPEN: table is imported incorrectly as white table
Status: VERIFIED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.3.0.0.alpha0+ Master
Hardware: Other All
: medium normal
Assignee: Not Assigned
URL:
Whiteboard: target:4.3.0
Keywords: regression
: 77954 (view as bug list)
Depends on:
Blocks: DOCX-Tables
  Show dependency treegraph
 
Reported: 2014-04-21 09:40 UTC by Jorendc
Modified: 2017-09-27 21:41 UTC (History)
3 users (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
Left 4.2.4.1, right 4.3.0.0 (271.20 KB, image/png)
2014-04-21 09:40 UTC, Jorendc
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Jorendc 2014-04-21 09:40:15 UTC
Created attachment 97679 [details]
Left 4.2.4.1, right 4.3.0.0

* Download http://download.microsoft.com/documents/rus/microsoft4you/How_to_license_the_operating_system_Windows_8_new.docx
* Open using LibreOffice 4.3.0.0

Behavior: on first page, the first table is imported incorrectly as 'hard' white block.

Behavior on previous versions (4.2 and older): white text inside table is visible, table background does not cover the purple image. (see screenshot)

OK with Version: 4.1.5.3 Build ID: 1c1366bba2ba2b554cd2ca4d87c06da81c05d24
OK with Version: 4.2.4.1 Build ID: d4c441391e20647b3d2e8dde4d20aa868e77e515
NOT OK with Version: 4.3.0.0.alpha0+
Build ID: 619b4c40da9e85febbb08a3f7cf8aa8d10963fc1
TinderBox: MacOSX-x86@49-TDF, Branch:master, Time: 2014-04-18_00:07:53
Comment 1 tommy27 2014-04-26 02:16:20 UTC
bug confirmed under Win7x64 using Version: 4.3.0.0.alpha0+
Build ID: 870ce1188ef7bfb6e57eed2894a20b2ea30b2225
TinderBox: Win-x86@39, Branch:master, Time: 2014-04-22_00:13:36

status --> NEW
Comment 2 Yousuf Philips (jay) (retired) 2014-04-26 14:05:50 UTC
i guess my bug 77954 is a duplicate of this. :)
Comment 3 Jorendc 2014-04-26 14:06:50 UTC
*** Bug 77954 has been marked as a duplicate of this bug. ***
Comment 4 Commit Notification 2014-04-27 15:53:46 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=a55dac47b386cd5485ba1d828316e7695c34769b

fix drawing of 100% transparent frames (fdo#77723)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2014-04-27 15:53:59 UTC
LuboÅ¡ LuÅak committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=313b59d787357ef3da34e2833fefcf1143b09b5e

fix "transparency" of floating tables in docx import (fdo#77723)



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 6 Jorendc 2014-04-28 17:34:03 UTC
Verified fixed. Thanks Luboš!

Kind regards,
Joren

Version: 4.3.0.0.alpha1+
Build ID: a3c00ee3c7b3b0fbcde32baeb7023c7e8526b908
TinderBox: Win-x86@47-TDF, Branch:MASTER, Time: 2014-04-28_07:22:55
Comment 7 Andras Timar 2014-04-29 13:08:31 UTC
*** Bug 77848 has been marked as a duplicate of this bug. ***
Comment 8 Yousuf Philips (jay) (retired) 2014-05-05 13:10:36 UTC
Will this be pushed into 4.2.5 as well?
Comment 9 Jorendc 2014-05-05 17:43:10 UTC
*** Bug 78277 has been marked as a duplicate of this bug. ***