fix drawing of 100% transparent frames (fdo#77723)

Without this, the 100% transparent frame is actually drawn opaque.

Change-Id: Ibaaeead7fe2379d48ea9680719a082e322b7b0c9